--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@ button{
   <!-- SLIDESHOW -->
   <div class="slideshow">
     <!-- ⚠️ MATCH YOUR FILE NAMES EXACTLY (.jpeg etc) -->
-    <img src="Pic1.jpeg" class="slide active">
-    <img src="Pic2.jpeg" class="slide">
-    <img src="Pic3.jpeg" class="slide">
-    <img src="Pic4.jpeg" class="slide">
+    <img src="pic1.jpeg" class="slide active">
+    <img src="pic2.jpeg" class="slide">
+    <img src="pic3.jpeg" class="slide">
+    <img src="pic4.jpeg" class="slide">
   </div>
 
   <h1>Hey Shivani ❤️</h1>
@@ -206,3 +206,4 @@ setInterval(()=>{
 
 </body>
 </html>
+
